# HW_7_Web

./: README.md  config.ini  main.py  my_select.py  pyproject.toml
conf/: db.py  models.py
migration/: env.py
migration/versions/: 140cc546b3af_init.py  7214a9a918f4_init.py
seeds/: bd_constants.py  seed.py
